# curses-minitel

./: README.md  vcpkg.json
esp32/Minitel1B_SSH_Client/: Minitel1B_SSH_Client.ino
form/: CMakeLists.txt  CMakeUserPresets.json
form/src/: main.c
src/: main.c
